# parity-check

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/skills/parity-check-author-requests/: SKILL.md  examples.md
.cursor/skills/parity-check-run/: SKILL.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  concepts.md  deployment.md  examples.md  getting-started.md  request-schema.md
docs/adr/: 0000-template.md  0001-grpc-and-mixed-protocol-parity.md
projects/example/: README.md  demo_servers.py  project.yaml
projects/example-grpc/: README.md  demo_servers.py  project.yaml
projects/example-grpc/env/: local.yaml
projects/example-grpc/requests/: say-hello.yaml
projects/example/env/: local.yaml
projects/example/requests/: get-health.yaml
src/parity_check/: cli.py  errors.py
src/parity_check/compare/: __init__.py  diff.py  jsonpath_ignore.py  normalize.py
src/parity_check/config/: __init__.py  env_merge.py  loader.py  models.py  random_builtin.py  tags.py  variables.py
src/parity_check/grpc/: client.py  proto_loader.py  runner.py  status.py
src/parity_check/http/: __init__.py  client.py  runner.py
src/parity_check/report/: __init__.py  artifacts.py  console.py  labels.py
tests/: grpc_server.py  test_artifacts.py  test_diff.py  test_grpc_client.py  test_grpc_runner.py  test_grpc_status.py  test_http_client.py  test_labels.py  test_loader.py  test_normalize.py  test_proto_loader.py  test_random_builtin.py  test_runner.py  test_skip.py  test_tags.py  test_transport_mixed.py  test_variables.py
(+4 files in other folders)
