[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parity-check"
version = "0.1.0"
description = "CLI tool to compare HTTP responses from two API services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["api", "parity", "regression", "http", "cli", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "deepdiff>=7.0",
    "jsonpath-ng>=1.6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.6.0",
]

[project.scripts]
parity-check = "parity_check.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/parity_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
